fixed el gordo and added custom el-gordo db link das is filterable